Copy Throbber into the java14_glazedlists directory /test directory.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1128 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -218,7 +218,7 @@
             <fileset dir=".">
                 <exclude name="java14_glazedlists/**"/>
                 <exclude name="source/**"/>
-                <exclude name="test/**"/>
+                <exclude name="test/**/*.java"/> <!-- copy resource (like the Throbber) embedded within test -->
                 <exclude name="classes/**"/>
                 <exclude name="docs/**"/>
             </fileset>
