Now with hyperlinks to bugs in the browser, plus we changed from a description table to a description text pane
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1138 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -306,7 +306,9 @@
 
     <target name="demojar" depends="init,clean,core,swing"
         description="Create a .jar file with a demo application.">
+        <property environment="env"/>
         <javac destdir="classes" srcdir="test" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+            <classpath><fileset file="${env.JAVA_HOME}/jre/lib/javaws.jar"/></classpath>
             <include name="**/demo/**"/>
             <exclude name="**/swt/**"/>
         </javac>
