Now with hyperlinks to bugs in the browser, plus we changed from a description table to a description text pane
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1141 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -295,6 +295,7 @@
             <classpath>
                 <fileset dir="extensions" includes="**/*.jar"/>
                 <fileset file="${ant.home}/lib/junit.jar"/>
+                <fileset file="${env.JAVA_HOME}/jre/lib/javaws.jar"/>
             </classpath>
         </javac>
     </target>
