Now with hyperlinks to bugs in the browser, plus we changed from a description table to a description text pane
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1142 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -210,7 +210,7 @@
             <classpath path="tools/declawer.jar"/>
 
             <arg value="test"/>
-            <arg value="classes:${ant.home}/lib/junit.jar:${env.JAVA_HOME}/jre/lib/javaws.jar"/>
+            <arg value="classes${path.separator}${ant.home}/lib/junit.jar${path.separator}${env.JAVA_HOME}/jre/lib/javaws.jar"/>
             <arg value="java14_glazedlists/test"/>
         </java>
 
