KTable is now not in compileall, while we work on dependency management.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1145 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -102,7 +102,7 @@
 		description="Compile the default components of the source.">
 	</target>
 
-	<target name="compileall" depends="core,migrationkit,swing,swt,ktable,io"
+	<target name="compileall" depends="core,migrationkit,swing,swt,io"
 		description="Compile all components of the source.">
 	</target>
 
