--- a/build.xml
+++ b/build.xml
@@ -162,7 +162,7 @@
         </javac>
     </target>
 
-    <target name="ktable" depends="core,swt">
+    <target name="ktable" depends="core,swt,issuesbrowser">
         <mkdir dir="extensions/ktable/lib"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="classes"/>
@@ -178,7 +178,11 @@
     </target>
 
     <target name="issuesbrowser" depends="core,swing,swt">
-        <javac destdir="classes" srcdir="extensions/issuesbrowser/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on"/>
+        <javac destdir="classes" srcdir="extensions/issuesbrowser/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+            <classpath>
+                <fileset dir="extensions/swt/lib/" includes="*.jar"/>
+            </classpath>
+        </javac>
     </target>
 
     <target name="demojar" depends="init,clean,issuesbrowser"
